# gamtools_nbsm

./: CMakeLists.txt  LICENSE  ReadME.md
bwa_mem/: Version  bntseq.c  bwa.c  bwa.h  bwamem.c  bwamem_pair.c  fastmap.c  gam_bwa_mem.cc  gam_bwa_mem.h  gam_read.h  kstring.h
fastqc/: base_fastq_info.cc  base_fastq_info.h  fastq_info_statistics.cc  fastq_info_statistics.h  filter_processor.cc  filter_processor.h  gam_fastq_file.cc  gam_fastq_file.h  gam_fastq_read_impl.cc  gam_fastq_read_impl.h
hts/: hts.c  sam.c
hts/htslib/: sam.h
include/sm/: options.h
lib/htslib-1.3.1/: INSTALL  Makefile  configure.ac  htslib.pc.in
mkdup/: gam_mark_duplicate_impl.cc  gam_mark_duplicate_impl.h  gam_mark_duplicate_impl_test.cc  mark_duplicate_frag_end.cc  mark_duplicate_frag_end.h  mark_duplicate_read_ends.cc  mark_duplicate_read_ends.h  mark_duplicate_region.cc  mark_duplicate_region.h  mark_duplicate_region_test.cc
nbsm/: bam_output_test.cc  gamtools_sm_impl.cc  gamtools_sm_impl.h  gamtools_sm_impl_test.cc  main.cc  nbsm_impl.cc  nbsm_impl.h  nbsm_impl_test.cc  nbsm_options.cc  nbsm_options.h  nbsm_options_test.cc  options.cc  options.h
prof/: prof.py  prof_plot.py
qc_report/: qc_compute.cc  qc_compute.h  qc_result_analysis.cc  qc_result_analysis.h  qc_result_data.cc  qc_result_data.h  qc_stat.cc  qc_stat.h  qc_stat_impl.cc  qc_stat_impl.h  qc_test.cc  quality_control.cc  quality_control.h
sharding/: bam_block.cc  bam_block.h  bam_block_sort_test.cc  bam_block_test.cc  bam_partition_data.cc  bam_partition_data.h  bam_partition_data_test.cc  bam_sharding_impl.cc  bam_sharding_impl.h  bam_sort_mkdup_impl.cc  bam_sort_mkdup_impl.h  gam_block.cc  gam_block.h
util/: arena.cc  arena.h  array_block_queue.h  atomic_ptr.h  block.cc  block.h  block_queue.h  bounded_queue.h  channel.h  create_index.cc  create_index.h  debug_util.cc  debug_util.h  gam_read_buffer.cc  gam_read_buffer.h  gam_thread_pool.cc  gam_thread_pool.h  glogger.cc  glogger.h  glogger_test.cc  nbsm_static.cc  nbsm_static.h  options.cc  order_block_queue.h  random.h  skiplist.h  skiplist_test.cc  slice.h  thread_pool.cc  thread_pool.h
